
(t)tue jan 19 21
(u)Flaborized
(p)3370
(e)🆕|feature
(*)Musicians now have a guitar.
(u)pali
(p)3397
(e)🆕🎨|feature, sprites
(*)Janitor closets now have a new handheld vacuum cleaner. It can suck up small items and smoke (like miasma). Temporary sprites unless <i>you</i> make me better ones.
(u)UrsulaMajor
(e)⚖🆕|balance, feature
(*)The Pathology Research test has concluded. Thank you for your participation! Please give your thoughts here: <a target="_blank" href="https://forum.ss13.co/showthread.php?tid=15693">Pathology Feedback</a>
(u)pali
(p)3372
(e)🆕|feature
(*)Enabled a certain locker-related random event.
(u)Tarmunora
(e)⚖🆕|balance, feature
(*)CPR now has a small chance to cure cardiac arrest, if the patient isn't too injured. Cardiac stimulants may help your odds.
(u)zjdtmkhzt
(p)3361
(e)⚖🆕|balance, feature
(+)Devastating artifact bombs now give a stationwide message when armed or disarmed (you can use an activator artifact on them to do that!).
(t)mon jan 18 21
(u)BenLubar
(p)3384
(e)|
(+)Fixed a bug with APCs not exiting their "fully charged" status. See the pull request for technical details.
(u)Chickenish
(p)3330
(e)|
(+)The time that the oil buff for cyborgs lasts is no longer increased by lag.
(u)pali
(*)The bug report button (in the top right corner of your game client) has now an option for reporting exploits. Use this instead of the forum please.
(u)Superlagg
(p)3329
(e)🐛|bug
(+)Fixed werewolf transformations not working properly with other mutant races.
(+)Buffed werewolf transformation. Now also clears burning, radiation, and stagger, adds +10 stun resistance, applies twice as much regeneration than it did previously, and regrows any lost or robotic limbs.
(t)sun jan 17 21
(u)Ursulamejor
(e)🆕|feature
(*)Be nice to the clown chickens. Or else.
(u)Asche
(p)3307
(e)⚖|balance
(+)Ship components have fallen in price. On the bright side, space traders are accepting some new items.
(u)zjdtmkhzt
(p)3337
(e)⚖🆕🎨|balance, feature, sprites