@@ -4,8 +4,8 @@
 #define RADIOC_COMMAND "#334E6D"
 #define RADIOC_SECURITY "#E00000"
 #define RADIOC_ENGINEERING "#A86800"
-#define RADIOC_MEDICAL "#461B7E"
-#define RADIOC_RESEARCH "#153E7E"
+#define RADIOC_MEDICAL "#153E7E"
+#define RADIOC_RESEARCH "#461B7E"
 #define RADIOC_CIVILIAN "#A10082"
 #define RADIOC_SYNDICATE "#962121"
 #define RADIOC_OTHER "#800080"
